# Openclaw-PEnhance

./: .gitignore  PLAN.md  README.md
config/: algorithm-config.json  memory-config.json  openclaw-config.json  plan-config.json
enhancement/: context_compressor.py  templates.py
mcp-server/: README.md  penhance_mcp.py  pyproject.toml  run.sh
proxy/: README.md  config.py  enhancer.py  penhance_proxy.py  requirements.txt  start.sh  stop.sh
scripts/: penhance-hook.sh
skills/penhance/: SKILL.md
skills/penhance/references/algorithm-patterns/: common-patterns.md
skills/penhance/references/best-practices/: coding-best-practices.md
skills/penhance/scripts/: algorithm-analyzer.py  memory-manager.py  plan-enforcer.py
templates/: algorithm-template.md  plan-template.md  session-template.json
